[gd_scene load_steps=2 format=3 uid="uid://bfj8k0yjr5h0s"]

[ext_resource type="Script" path="res://src/ui/menus/StatsDashboard.gd" id="1_7g9mf"]

[node name="StatsDashboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_7g9mf")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "ðŸ“Š Statistics Dashboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsContent" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GlobalStatsContainer" type="VBoxContainer" parent="VBox/ScrollContainer/StatsContent"]
layout_mode = 2

[node name="Separator1" type="HSeparator" parent="VBox/ScrollContainer/StatsContent"]
layout_mode = 2

[node name="LevelStatsContainer" type="VBoxContainer" parent="VBox/ScrollContainer/StatsContent"]
layout_mode = 2

[node name="Separator2" type="HSeparator" parent="VBox/ScrollContainer/StatsContent"]
layout_mode = 2

[node name="AchievementsContainer" type="VBoxContainer" parent="VBox/ScrollContainer/StatsContent"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="ExportButton" type="Button" parent="VBox/ButtonContainer"]
layout_mode = 2
text = "Export Stats"

[node name="ResetButton" type="Button" parent="VBox/ButtonContainer"]
layout_mode = 2
text = "Reset Stats"

[node name="BackButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Back to Level Select" 